# sportify

./: Cargo.toml  README.md  bun.lockb  docker-compose.yml  package.json
apps/cmd-api/: Cargo.toml
apps/cmd-api/src/: config.rs  main.rs
apps/cmd-api/src/routes/: teams.rs
apps/core-api/: package.json
apps/core-api/src/: index.ts
apps/core-api/src/controllers/: teams.ts
apps/core-api/src/libs/: kafka.ts
libs/kafka/: Cargo.toml
libs/kafka/src/: lib.rs  producer.rs
libs/protobuf/: Cargo.toml  build.rs
libs/protobuf/src/: lib.rs  teams.proto
